# small-c-programs

./: .gitignore  README.md
GuessANumber/: GuessANumber.c  score_board.csv  scoreboard.csv
huffman-compression/: CMakeLists.txt  example.txt  huffman.c  mmap_utils.c  mmap_utils.h  visualization_utils.c  visualization_utils.h
huffman-compression/include/: structures.h
huffman-compression/src/: huffman.c  mmap_utils.c  structures.c  structures.test.c  visualization_utils.c  visualization_utils.h
